Chapter04/4.5.3 pod-dnspolicy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
