Chapter04/4.5.2 pod-customize-hostname-subdomain.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: webapp1
  labels:
    app: webapp1
spec:
  hostname: webapp-1
  subdomain: mysubdomain
  containers:
  - name: webapp1
    image: kubeguide/tomcat-app:v1
    ports:
    - containerPort: 8080


---
apiVersion: v1
kind: Service
metadata:
  name: mysubdomain
spec:
  selector:
    app: webapp
  clusterIP: None
  ports:
  - port: 8080
